[gd_scene load_steps=8 format=2]

[ext_resource path="res://audio/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://audio/kyle_wood_on_pad_fast_tapping.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/kyle_mouth_bite1.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/kyle_plastic_on_pad_fast_tapping.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/kyle_biting_carrot2.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/kyle_biting_carrot1.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/kyle_fingers_on_pad_fast_tapping.wav" type="AudioStream" id=7]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="GameWinningMusic" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="SmallChomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "Effects"

[node name="Steps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
bus = "Movement"

[node name="BigChomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "Effects"

[node name="MediumChomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Effects"

[node name="BiggerSteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 5.0
bus = "Movement"

[node name="GiantSteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0
bus = "Movement"
